--- a/CRM/TaskInformation.xaml
+++ b/CRM/TaskInformation.xaml
@@ -17,7 +17,7 @@
         <Label Content="Start Time" HorizontalAlignment="Left" Margin="17,78,0,0" VerticalAlignment="Top" Width="64"/>
         <DatePicker x:Name="dpStartDate"  SelectedDateFormat="Short" HorizontalAlignment="Left" Margin="17,105,0,0" VerticalAlignment="Top" Width="157"/>
         <DatePicker x:Name="dpEndDate" SelectedDateFormat="Short" HorizontalAlignment="Left" Margin="194,105,0,0" VerticalAlignment="Top" Width="156"/>
-        <Button x:Name="btUpdate" Content="UPDATE" HorizontalAlignment="Left" Margin="17,268,0,0" VerticalAlignment="Top" Width="157" Foreground="#FF055905" Height="32" />
+        <Button x:Name="btUpdate" Content="UPDATE" HorizontalAlignment="Left" Margin="17,268,0,0" VerticalAlignment="Top" Width="157" Foreground="#FF055905" Height="32" Click="btUpdate_Click" />
         <Label Content="Ends" HorizontalAlignment="Left" Margin="194,78,0,0" VerticalAlignment="Top" Width="42"/>
         <Label Content="Employee" HorizontalAlignment="Left" Margin="194,28,0,0" VerticalAlignment="Top" Width="65"/>
         <ComboBox x:Name="cbEmployeeList" IsEditable="True" StaysOpenOnEdit="True"  HorizontalAlignment="Left" Margin="194,54,0,0" VerticalAlignment="Top" Width="156" SelectionChanged="cbEmployeeList_SelectionChanged"/>
@@ -25,37 +25,16 @@
 
         <Label Content="Task Type" HorizontalAlignment="Left" Margin="372,79,0,0" VerticalAlignment="Top" Width="65"/>
         <ComboBox x:Name="cbTaskType" HorizontalAlignment="Left" Margin="372,105,0,0" VerticalAlignment="Top" Width="157" SelectionChanged="cbTaskType_SelectionChanged">
-            <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
-            <ComboBoxItem>Meeting</ComboBoxItem>
-            <ComboBoxItem>Call</ComboBoxItem>
-            <ComboBoxItem>Email</ComboBoxItem>
-            <ComboBoxItem>Event</ComboBoxItem>
-            <ComboBoxItem>Note</ComboBoxItem>
         </ComboBox>
         <Label Content="Status" HorizontalAlignment="Left" Margin="17,127,0,0" VerticalAlignment="Top" Width="48"/>
         <ComboBox x:Name="cbStatus" HorizontalAlignment="Left" Margin="17,153,0,0" VerticalAlignment="Top" Width="157" SelectionChanged="cbStatus_SelectionChanged">
-            <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
-            <ComboBoxItem>Active</ComboBoxItem>
-            <ComboBoxItem>Planned</ComboBoxItem>
-            <ComboBoxItem>In progress</ComboBoxItem>
-            <ComboBoxItem>Done</ComboBoxItem>
-
         </ComboBox>
         <Label Content="Priority" HorizontalAlignment="Left" Margin="194,127,0,0" VerticalAlignment="Top" Width="48"/>
         <ComboBox x:Name="cbPriority" HorizontalAlignment="Left" Margin="194,153,0,0" VerticalAlignment="Top" Width="156" SelectionChanged="cbPriority_SelectionChanged">
-            <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
-            <ComboBoxItem>Low</ComboBoxItem>
-            <ComboBoxItem>Normal</ComboBoxItem>
-            <ComboBoxItem>High</ComboBoxItem>
         </ComboBox>
         <Label Content="Reminder" HorizontalAlignment="Left" Margin="372,127,0,0" VerticalAlignment="Top" Width="120"/>
         <ComboBox x:Name="cbReminder" HorizontalAlignment="Left" Margin="372,153,0,0" VerticalAlignment="Top" Width="157" SelectionChanged="cbReminder_SelectionChanged">
-            <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
-            <ComboBoxItem>E-mail</ComboBoxItem>
-            <ComboBoxItem>Call</ComboBoxItem>
-            <ComboBoxItem>Message</ComboBoxItem>
         </ComboBox>
-
         <Label Content="Description" HorizontalAlignment="Left" Margin="17,175,0,0" VerticalAlignment="Top" Width="70"/>
         <TextBox x:Name="tbDescription" HorizontalAlignment="Left" Height="48" Margin="17,201,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="512"/>
         <Label x:Name="label_Copy5" Content="" HorizontalAlignment="Left" Margin="557,105,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
