--- a/CRM/MainWindow.xaml
+++ b/CRM/MainWindow.xaml
@@ -7,7 +7,7 @@
         <TextBox x:Name="tbUserName" HorizontalAlignment="Left" Height="23" Margin="138,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" TabIndex="1"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="44,90,0,0" VerticalAlignment="Top" Foreground="Gold"/>
         <Label Content="Password" HorizontalAlignment="Left" Margin="44,130,0,0" VerticalAlignment="Top" Foreground="Gold"/>
-        <Button x:Name="btEnter" Content="ENTER" HorizontalAlignment="Left" Margin="140,180,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" TabIndex="3"/>
+        <Button x:Name="btEnter" Content="ENTER" HorizontalAlignment="Left" Margin="140,180,0,0" Foreground="DarkBlue" VerticalAlignment="Top" Width="75" Click="Button_Click" TabIndex="3" Background="Gold" AllowDrop="True"/>
         <PasswordBox x:Name="pbPsw" HorizontalAlignment="Left" Margin="138,130,0,0" VerticalAlignment="Top" Width="168" Height="24" TabIndex="2"/>
 
     </Grid>
