--- a/CRM/Window1.xaml
+++ b/CRM/Window1.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Name="TaskWindow" x:Class="CRM.Window1"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:ms="http://namespaces.mindscape.co.nz/wpf" x:Name="TaskWindow" x:Class="CRM.Window1"
         Title="Company name CRM system" Height="423" Width="731.625">
     <Grid>
         <ToolBar HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="34" Width="704">
@@ -10,37 +11,39 @@
             <Button Content="NEW TASK" Height="29" VerticalAlignment="Top" Width="75"/>
             <Button Content="CALENDAR" Height="29" VerticalAlignment="Top" Width="75"/>
             <Separator Height="29" Margin="0" VerticalAlignment="Top" Width="20" Background="#FFF1F3F5"/>
-            <ComboBox Name="clientList" VerticalAlignment="Top" Height="22" Margin="0,5,0,-5">
+            <ComboBox x:Name="clientList" VerticalAlignment="Top" Height="22" Margin="0,5,0,-5">
                 <ComboBoxItem IsSelected="True">
-                    <TextBlock >CLIENTS LIST</TextBlock>
+                    <TextBlock ><Run Text="CLIENTS LIST"/></TextBlock>
                 </ComboBoxItem>
-                <TextBlock>Huawai Nexus</TextBlock>
-                <TextBlock>Microsoft</TextBlock>
+                <TextBlock><Run Text="Huawai Nexus"/></TextBlock>
+                <TextBlock><Run Text="Microsoft"/></TextBlock>
             </ComboBox>
-            <ComboBox Name="employeesList" VerticalAlignment="Top" Height="22" Margin="0,5,0,-3">
+            <ComboBox x:Name="employeesList" VerticalAlignment="Top" Height="22" Margin="0,5,0,-3">
                 <ComboBoxItem IsSelected="True">
-                    <TextBlock >EMPLOYEES LIST</TextBlock>
+                    <TextBlock ><Run Text="EMPLOYEES LIST"/></TextBlock>
                 </ComboBoxItem>
-                <TextBlock>John Doe</TextBlock>
-                <TextBlock>Ben Clark</TextBlock>
+                <TextBlock><Run Text="John Doe"/></TextBlock>
+                <TextBlock><Run Text="Ben Clark"/></TextBlock>
             </ComboBox>
         </ToolBar>
         <StatusBar HorizontalAlignment="Left" Height="26" Margin="0,366,0,0" VerticalAlignment="Top" Width="724"/>
         <TabControl  HorizontalAlignment="Left" Height="271" Margin="154,80,0,0" VerticalAlignment="Top" Width="560">
             <TabItem Header="Today" Margin="-2,-2,-2,2">
-                <ListBox Name="lbTaskToday">
+                <ListBox x:Name="lbTaskToday">
                     <!--<TextBlock FontWeight="Bold" TextDecorations="Underline" Text="Today Tasks" />-->
-                    <ListBoxItem Background="LightGray">LG Nexus 5X</ListBoxItem>
-                    <ListBoxItem>Huawei Nexus 6P</ListBoxItem>
-                    <ListBoxItem Background="LightGray">iPhone 6S</ListBoxItem>
-                    <ListBoxItem>iPhone 6S Plus</ListBoxItem>
-                    <ListBoxItem Background="LightGray">Аsus Zenphone 2</ListBoxItem>
-                    <ListBoxItem>Microsoft Lumia 950</ListBoxItem>
+                    <ListBoxItem Background="LightGray" Content="LG Nexus 5X"/>
+                    <ListBoxItem Content="Huawei Nexus 6P"/>
+                    <ListBoxItem Background="LightGray" Content="iPhone 6S"/>
+                    <ListBoxItem Content="iPhone 6S Plus"/>
+                    <ListBoxItem Background="LightGray" Content="Аsus Zenphone 2"/>
+                    <ListBoxItem Content="Microsoft Lumia 950"/>
                 </ListBox>
 
             </TabItem>
             <TabItem Header="Week">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5" Margin="-62,-49,-75,-46">
+                    <ms:Scheduler HorizontalAlignment="Left" Margin="289,171,0,0" VerticalAlignment="Top"/>
+                </Grid>
             </TabItem>
             <TabItem Header="Month">
                 <Grid Background="#FFE5E5E5"/>
@@ -53,7 +56,7 @@
         <Label Content="Don Pedro" HorizontalAlignment="Left" Margin="0,44,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.053,0.154" Width="102" FontSize="16" FontWeight="Bold" Foreground="#FF0D54B9"/>
         <Label Content="TASKS" HorizontalAlignment="Left" Margin="154,44,0,0" VerticalAlignment="Top" Width="65" FontSize="16"/>
         <TreeView Margin="2,80,0,89" HorizontalAlignment="Left" Width="147">
-            <TextBox>TreeView</TextBox>
+            <TextBox Text="TreeView"/>
             <TreeViewItem Header="Departaments" Width="270">
                 <TreeViewItem Header="Dep 1" />
                 <TreeViewItem Header="Dep 2" />
