--- a/CRM/MainForm.xaml
+++ b/CRM/MainForm.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CRM system" Height="676" Width="936" WindowStartupLocation="CenterScreen">
     <Window.Resources>
-
         <BitmapImage x:Key="ImageSource2" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="pack://application:,,,/Resources/contact3.png"/>
         <BitmapImage x:Key="ImageSource3" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="pack://application:,,,/Resources/employees.png"/>
         <BitmapImage x:Key="ImageSource4" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="pack://application:,,,/Resources/contracts.png"/>
@@ -17,11 +16,7 @@
         <BitmapImage x:Key="ImageSource12" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="pack://application:,,,/Resources/newemployee.png"/>
         <BitmapImage x:Key="ImageSource13" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="pack://application:,,,/Resources/products.png"/>
         <Style TargetType="Button">
-            <Style.Setters>
-                <!--<Setter Property="Button.Background" Value="White" />
-                
-                <Setter Property="Button.FontFamily" Value="Verdana" />
-                <Setter Property="Button.Margin" Value="10" />-->
+            <Style.Setters>                
                 <Setter Property="Button.Background" Value="White" />
                 <Setter Property="Foreground" Value="White" />
             </Style.Setters>
@@ -35,10 +30,10 @@
         </Style>
         <Style TargetType="DataGridRow">
             <Style.Setters>
-                <!--<Setter Property="Button.Background" Value="Black" />
-                <Setter Property="Button.Foreground" Value="White" />
-                <Setter Property="Button.FontFamily" Value="Verdana" />
-                <Setter Property="Button.Margin" Value="10" />-->
+              <!--  <Setter Property="DataGridRow.Background" Value="Black" />
+                <Setter Property="DataGridRow.Foreground" Value="White" />
+                <Setter Property="DataGridRow.FontFamily" Value="Verdana" />
+                <Setter Property="DataGridRow.Margin" Value="10" />-->
             </Style.Setters>
             <Style.Triggers>
                 <Trigger Property="IsMouseOver" Value="True">
